[gd_scene load_steps=9 format=3 uid="uid://dxphpuocbhbrg"]

[ext_resource type="Script" path="res://systems/card_combat/cards/select_card.gd" id="1_gup87"]
[ext_resource type="AudioStream" uid="uid://cjkm5388mov46" path="res://assets/sounds/card_hover.ogg" id="1_vxo3i"]
[ext_resource type="PackedScene" uid="uid://dl86q0oq58j6q" path="res://systems/card_combat/cards/card_base.tscn" id="1_xraf4"]
[ext_resource type="AudioStream" uid="uid://csn44i17fqgdd" path="res://assets/sounds/card_pick.ogg" id="2_lu1ut"]
[ext_resource type="Shader" path="res://shaders/noise_walk.gdshader" id="3_1n1oj"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_vw3vf"]
noise_type = 0
frequency = 0.0161
domain_warp_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_68116"]
seamless = true
normalize = false
noise = SubResource("FastNoiseLite_vw3vf")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cg4fh"]
shader = ExtResource("3_1n1oj")
shader_parameter/strength = 109.095
shader_parameter/noise_speed = 0.05
shader_parameter/noise_threshold = -0.155
shader_parameter/noise_falloff = 0.06
shader_parameter/bleed_strength = 1.375
shader_parameter/noise = SubResource("NoiseTexture2D_68116")

[node name="SelectCard" instance=ExtResource("1_xraf4")]
scale = Vector2(1.28, 1.28)
script = ExtResource("1_gup87")

[node name="selected" type="ColorRect" parent="." index="0"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_cg4fh")
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.968627, 0.509804, 0, 1)

[node name="HoverSound" type="AudioStreamPlayer" parent="." index="7"]
stream = ExtResource("1_vxo3i")

[node name="ClickSound" type="AudioStreamPlayer" parent="." index="8"]
stream = ExtResource("2_lu1ut")
